--- a/style.css
+++ b/style.css
@@ -1,7 +1,82 @@
-
-
+.threadsTop {
+  margin: 0 auto;
+  text-align: center;
+  font-size: 50px;
+}
 .box {
-  
-  border: 1px solid black;
-  width: 30%;
+  margin: 0 auto;
+  padding-top: 5px;
+  /*border: 1px solid black;*/
+  width: 100%;
+  height: 50%;
+  text-align: center;
+}
+
+.newThread {
+  margin: 0 auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 10px 10px;
+  /*border: 1px dashed white;*/
+  height: 5%;
+  width: 20%;
+  background-color: black;
+  color: white;
+}
+.newThread:hover {
+  /*text-decoration: underline;*/
+  cursor: default;
+  transform:rotate(0deg) scale(1.134) skew(-180deg) translate(0px) ;
+  -webkit-transform:rotate(0deg) scale(1.134) skew(-180deg) translate(0px) ;
+  -moz-transform:rotate(0deg) scale(1.134) skew(-180deg) translate(0px) ;
+  -o-transform:rotate(0deg) scale(1.134) skew(-180deg) translate(0px) ;
+  -ms-transform:rotate(0deg) scale(1.134) skew(-180deg) translate(0px) ;
+}
+
+.threadsInputCont {
+  margin: 0 auto;
+  /*border: 1px solid blue;*/
+  width: 100%;
+  height: 50%;
+  text-align: center;
+}
+.threadsInput {
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  /*width: 50%;*/
+  font-size: 15px;
+  /*border: 1px solid red;*/
+  padding: 10px 10px;
+}
+
+.threadsButton {
+  height: 40px;
+  /*width: 50%;*/
+  font-size: 20px;
+}
+
+.threadComments {
+  border: 1px dashed orange;
+  margin: 0 auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 10px 10px;
+  word-wrap: break-word;
+
+}
+
+.commentsBox {
+  margin: 0 auto;
+  /*border: 1px solid red;*/
+  width: 50%;
+}
+
+.threadText {
+  text-align:center;
+
+  padding: 10px 10px;
+  /*border: 1px solid blue;*/
+  font-size: 20px;
+  margin-top: 20px;
 }
